[package]
name = "wasm-mazes"
description = "Generate mazes with Rust and WebAssembly"
version = "0.1.0"
authors = ["Mauri Mustonen <mauri_mustonen@hotmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/Kazhuu/wasm-mazes"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# Enable wee_alloc allocation library.
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.82"
wee_alloc = { version = "0.4.2", optional = true }
rand = "0.8.5"
rand_chacha = "0.3.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[dependencies.getrandom]
features = ["js"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.3.32"
futures = "0.3.21"
js-sys = "0.3.59"
wasm-bindgen-futures = "0.4.32"
